checkin-checkout asset